LPD-36530 liferay-intellij-plugin: sets the add-opens args in the JDK_JAVA_OPTIONS env var if the JDK is 11 or higher